--- a/example/header.html
+++ b/example/header.html
@@ -1,15 +1,15 @@
-<nav className="navbar" role="navigation" aria-label="main navigation">
-  <div className="navbar-item">
-    <h2 className="is-size-4">Vue List Of Posts</h2>
+<nav class="navbar" role="navigation" aria-label="main navigation">
+  <div class="navbar-item">
+    <h2 class="is-size-4">Vue List Of Posts</h2>
   </div>
-  <div className="navbar-end">
-    <div className="navbar-item">
-      <div className="buttons">
-        <div className="mr-5 mb-2">
+  <div class="navbar-end">
+    <div class="navbar-item">
+      <div class="buttons">
+        <div class="mr-5 mb-2">
           <p>User: {user.name}</p>
         </div>
 
-        <a className="button is-light"> Logout </a>
+        <a class="button is-light"> Logout </a>
       </div>
     </div>
   </div>
