--- a/example/postPreview.html
+++ b/example/postPreview.html
@@ -1,16 +1,12 @@
-<div className="block">
-  <div
-    className="is-flex is-justify-content-space-between is-align-items-center"
-  >
+<div class="block">
+  <div class="is-flex is-justify-content-space-between is-align-items-center">
     <h2>#post id: post title</h2>
-    <div className="is-flex">
-      <span className="icon is-small is-right is-clickable">
-        <i className="fas fa-pen-to-square"></i>
+    <div class="is-flex">
+      <span class="icon is-small is-right is-clickable">
+        <i class="fas fa-pen-to-square"></i>
       </span>
-      <span
-        className="icon is-small is-right has-text-danger is-clickable ml-3"
-      >
-        <i className="fas fa-trash"></i>
+      <span class="icon is-small is-right has-text-danger is-clickable ml-3">
+        <i class="fas fa-trash"></i>
       </span>
     </div>
   </div>
