--- a/example/postsList.html
+++ b/example/postsList.html
@@ -1,25 +1,25 @@
-<div className="tile is-parent">
-  <div className="tile is-child box is-success">
-    <div className="block">
-      <div className="block is-flex is-justify-content-space-between">
-        <p className="title">Posts</p>
-        <button type="button" className="button is-link">Add New Post</button>
+<div class="tile is-parent">
+  <div class="tile is-child box is-success">
+    <div class="block">
+      <div class="block is-flex is-justify-content-space-between">
+        <p class="title">Posts</p>
+        <button type="button" class="button is-link">Add New Post</button>
       </div>
 
-      <table className="table is-fullwidth is-striped is-hoverable is-narrow">
+      <table class="table is-fullwidth is-striped is-hoverable is-narrow">
         <thead>
-          <tr className="has-background-link-light">
+          <tr class="has-background-link-light">
             <th>ID</th>
             <th>Title</th>
-            <th className="has-text-right">Actions</th>
+            <th class="has-text-right">Actions</th>
           </tr>
         </thead>
         <tbody>
           <tr>
             <td>id</td>
             <td>title</td>
-            <td className="has-text-right is-vcentered">
-              <button type="button" className="button is-link">Open</button>
+            <td class="has-text-right is-vcentered">
+              <button type="button" class="button is-link">Open</button>
             </td>
           </tr>
         </tbody>
