--- a/example/sidebar/index.html
+++ b/example/sidebar/index.html
@@ -1,7 +1,7 @@
-<div className="tile is-parent is-8-desktop Sidebar Sidebar--open">
-  <div className="tile is-child box is-success ">
-    <div className="tile is-child box is-success ">
-      <div className="content">
+<div class="tile is-parent is-8-desktop Sidebar Sidebar--open">
+  <div class="tile is-child box is-success">
+    <div class="tile is-child box is-success">
+      <div class="content">
         <!-- Content here -->
       </div>
     </div>
