--- a/example/noCommentsYet.html
+++ b/example/noCommentsYet.html
@@ -1,3 +1,3 @@
-<div className="block">
-  <p className="title is-4">No comments yet</p>
+<div class="block">
+  <p class="title is-4">No comments yet</p>
 </div>
