--- a/example/writeCommentBtn.html
+++ b/example/writeCommentBtn.html
@@ -1,1 +1,1 @@
-<button type="button" className="button is-link">Write a comment</button>
+<button type="button" class="button is-link">Write a comment</button>
